--- a/vm/code.css
+++ b/vm/code.css
@@ -1,25 +1,6 @@
-*{
+.code *{
     font-family: monospace
 }
-body{
-    font-size: 15px;
-    background-color: #181818;
-    padding: 0px;
-    margin: 0px;
-    height: 100vh;
-}
-
-
-div.interface{
-    display: grid;
-    grid-template-columns: 1fr auto auto 1fr;
-    grid-template-rows: auto 1fr;
-    grid-template-areas:
-        "left code controls right";
-    align-items: stretch;
-    min-height: 100%;
-}
-
 
 div.code{
     color: white;
@@ -28,19 +9,6 @@ div.code{
     padding-right: 3em;
     border: 0px solid #555;
     border-width: 0px 2px 0px 2px;
-}
-
-div#graph{
-    background-color: white;
-    grid-area: left;
-}
-
-#asm_code{
-    grid-area: left;
-}
-
-#controls{
-    grid-area: controls;
 }
 
 .code span.c-type{
